--- a/index.html
+++ b/index.html
@@ -2,8 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <h1></h1>
+    <footer>
+      Coded by
+      <a href="https://github.com/lynslemon">Lyndsay Oxley</a>
+      , the code is
+      <a href="https://github.com/lynslemon/shecodes-weather-app"
+        >hosted on github</a
+      >
+      and the website is
+      <a href="https://lyndsay-weather-app.netlify.app/">hosted on Netlify.</a>
+    </footer>
+  </body>
 </html>
