added main section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,28 @@
     <title>Document</title>
   </head>
   <body>
-    <h1></h1>
+    <header>
+        <form>
+            <input type="search" placeholder="Enter a city..." required />
+            <input type="submit" value="Search"/>
+        </form>
+    </header>
+    <main>
+        <div>
+        <h1>
+            Paris
+          </h1>
+          <p>
+            Tuesday 14:39, scattered clouds
+            <br/>
+            Humidity: 66%, wind: 23 km/hr 
+          </p>
+        </div>
+        <div>🌨 12 C</div>
+
+          </main>
+    </main>
+    
     <footer>
       Coded by
       <a href="https://github.com/lynslemon">Lyndsay Oxley</a>
