--- a/index.html
+++ b/index.html
@@ -3,54 +3,62 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/style.css"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="src/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
     <title>Document</title>
   </head>
   <body>
     <div class="weather-app">
-    <header>
-        <form class="search-form">
-            <input type="search" placeholder="Enter a city..." required class="search-form-input"/>
-            <input type="submit" value="Search"class="search-form-button"/>
+      <header>
+        <form class="search-form" id="search-form">
+          <input
+            type="search"
+            placeholder="Enter a city..."
+            required
+            class="search-form-input"
+            id="search-form-input"
+          />
+          <input type="submit" value="Search" class="search-form-button" />
         </form>
-    </header>
-    <main>
+      </header>
+      <main>
         <div class="weather-app-data">
-        <div>
-        <h1 class="weather-app-city">
-            Paris
-          </h1>
-          <p class="weahter-app-details">
-            Tuesday 14:39, scattered clouds
-            <br/>
-            Humidity: <strong>66%</strong>, wind: <strong>3.2 km/hr</strong>  
-          </p>
-        </div>
+          <div>
+            <h1 class="weather-app-city" id="weather-app-city">Paris</h1>
+            <p class="weahter-app-details">
+              Tuesday 14:39, scattered clouds
+              <br />
+              Humidity: <strong>66%</strong>, wind: <strong>3.2 km/hr</strong>
+            </p>
+          </div>
         </div>
         <div class="weather-app-temperature-container">
-            <div class="weather-app-icon">🌨</div>
-            <div class="weather-app-temperature"> 12 </div>
-            <div class="weather-app-unit"> C </div>
-                
-            </div>
+          <div class="weather-app-icon">🌨</div>
+          <div class="weather-app-temperature" id="temperature">12</div>
+          <div class="weather-app-unit">C</div>
+        </div>
+      </main>
 
-          </main>
-    </main>
-    
-    <footer>
-      Coded by
-      <a href="https://github.com/lynslemon">Lyndsay Oxley</a>
-      , the code is
-      <a href="https://github.com/lynslemon/shecodes-weather-app"
-        >hosted on github</a
-      >
-      and the website is
-      <a href="https://lyndsay-weather-app.netlify.app/">hosted on Netlify.</a>
-    </footer>
+      <footer>
+        Coded by
+        <a href="https://github.com/lynslemon">Lyndsay Oxley</a>
+        , the code is
+        <a href="https://github.com/lynslemon/shecodes-weather-app"
+          >hosted on github</a
+        >
+        and the website is
+        <a href="https://lyndsay-weather-app.netlify.app/"
+          >hosted on Netlify.</a
+        >
+      </footer>
     </div>
+    <script src="src/index.js"></script>
   </body>
 </html>
