--- a/index.html
+++ b/index.html
@@ -31,17 +31,18 @@
       <main>
         <div class="weather-app-data">
           <div>
-            <h1 class="weather-app-city" id="weather-app-city">Paris</h1>
+            <h1 class="weather-app-city" id="weather-app-city"></h1>
             <p class="weahter-app-details">
-              Tuesday 14:39, scattered clouds
+              <span id="time"></span>, <span id="description"></span>
               <br />
-              Humidity: <strong>66%</strong>, wind: <strong>3.2 km/hr</strong>
+              Humidity: <strong id="humidity"></strong>, wind:
+              <strong id="wind-speed"></strong>
             </p>
           </div>
         </div>
         <div class="weather-app-temperature-container">
-          <div class="weather-app-icon">🌨</div>
-          <div class="weather-app-temperature" id="temperature">12</div>
+          <div id="icon"></div>
+          <div class="weather-app-temperature" id="temperature"></div>
           <div class="weather-app-unit">C</div>
         </div>
       </main>
