--- a/index.html
+++ b/index.html
@@ -45,6 +45,16 @@
           <div class="weather-app-temperature" id="temperature"></div>
           <div class="weather-app-unit">C</div>
         </div>
+        <div class="weather-forecast">
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Tue</div>
+            <div vclass="weather-forecast-icon">🌥</div>
+            <div class="weather-forecast-temperatures">
+              <span class="weather-forecast-temperature-max"> 18</span>
+              <span class="weather-forescast-temperature-min"> 12 </span>
+            </div>
+          </div>
+        </div>
       </main>
 
       <footer>
